# pavex_tera_template

./: Cargo.toml  License.txt  README.md
src/: config.rs  engine.rs  errors.rs  lib.rs  template.rs  template_engine.rs
tests/: render_tests.rs
tests/templates/: base.html  index.html  partial.html
