[package]
name = "pavex_template"
version = "0.2.0"
edition = "2024"
description = "A library which will aid in utilizing the Tera crate for creating HTML templates"
readme = "README.md"
repository = "https://github.com/sentinel1909/pavex_template.git"
license = "MIT"
publish = false

[dependencies]
serde = { version = "1.0.219", features = ["derive"] }
tera = "1.20.0"

[dev-dependencies]
tempfile = "3"
