[package]
name = "pavex_template"
version = "0.4.1"
edition = "2024"
description = "A library which will aid in utilizing the Tera crate for creating HTML templates"
readme = "README.md"
repository = "https://github.com/sentinel1909/pavex_template.git"
license = "MIT"
publish = false

[features]
default = []
serde = ["dep:serde"]

[dependencies]
serde = { version = "1.0.219", features = ["derive"], optional = true }
tera = "1.20.0"

[dev-dependencies]
tempfile = "3"
